# hamr

./: .gitignore  .qmllint.ini  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GlobalStates.qml  IMPLEMENTATION_PLAN.md  LICENSE  PKGBUILD  PROMPT_build.md  README.md  ReloadPopup.qml  SECURITY.md  STABILITY_SPEC.md  TASKS.md  TODO.md  aur-publish.sh  dev  flake.nix  hamr  hamr.install  install.sh  latest  mkdocs.yml  opencode.json  package.nix  progress.txt  pyproject.toml  shell.qml  uninstall.sh  versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: aur-publish.yml  ci.yml  docs.yml  nix-build.yml  release.yml  test-plugins.yml
actions/: AGENTS.md
actions/bitwarden/: handler.py
actions/dict/: handler.py
actions/pictures/: handler.py
actions/quicklinks/: handler.py
actions/screenshot/: manifest.json
actions/shell/: handler.py
actions/todo/: handler.py
config/: README.md  config.json  config.schema.json
crates/hamr-cli/: Cargo.toml
crates/hamr-cli/src/: main.rs
crates/hamr-core/: Cargo.toml
crates/hamr-core/benches/: search.rs
crates/hamr-core/src/: error.rs  lib.rs  platform.rs  utils.rs
crates/hamr-core/src/config/: dirs.rs  mod.rs  settings.rs  validation.rs
crates/hamr-core/src/engine/: mod.rs  plugins.rs  process.rs  suggestions.rs
crates/hamr-core/src/frecency/: mod.rs
crates/hamr-core/src/index/: mod.rs  store.rs
crates/hamr-core/src/plugin/: checksum.rs  convert.rs  manifest.rs  mod.rs  process.rs  protocol.rs
crates/hamr-core/src/search/: engine.rs  mod.rs  searchable.rs
crates/hamr-core/src/tests/: config_reload_tests.rs  config_tests.rs  daemon_tests.rs  fixtures.rs  frecency_tests.rs  index_tests.rs  mod.rs  plugin_tests.rs  protocol_tests.rs  search_tests.rs  suggestions_tests.rs
crates/hamr-daemon/: Cargo.toml  INTEGRATION_TESTS.md
crates/hamr-daemon/src/: config_watcher.rs  error.rs  lib.rs  main.rs  plugin_rpc.rs  plugin_spawner.rs  plugin_watcher.rs  registry.rs  server.rs  session.rs
crates/hamr-daemon/src/handlers/: form.rs  item.rs  mod.rs  plugin.rs  query.rs
crates/hamr-daemon/tests/: integration_tests.rs
crates/hamr-gtk/: Cargo.toml
crates/hamr-rpc/: Cargo.toml
crates/hamr-rpc/src/: client.rs  error.rs  helpers.rs  lib.rs  protocol.rs  transport.rs
crates/hamr-tui/: Cargo.toml
crates/hamr-tui/src/: app.rs  cli.rs  colors.rs  compositor.rs  lib.rs  main.rs  rpc.rs  state.rs
crates/hamr-tui/src/render/: ambient.rs  card.rs  error.rs  form.rs  grid_browser.rs  helpers.rs  image_browser.rs  mod.rs  preview.rs  results.rs  window_picker.rs
crates/hamr-tui/src/widgets/: badge.rs  chip.rs  color.rs  gauge.rs  graph.rs  icon.rs  mod.rs  slider.rs
crates/hamr-types/: Cargo.toml
crates/hamr-types/fuzz/: Cargo.toml
crates/hamr-types/fuzz/fuzz_targets/: fuzz_core_event.rs  fuzz_core_update.rs  fuzz_result_item.rs
crates/hamr-types/src/: lib.rs
docs/: PLUGINS.md  architecture.md  features.md  index.md  plugin-protocol.md
docs/getting-started/: cli.md  configuration.md  installation.md  logging.md  theming.md  troubleshooting.md
docs/plugins/: CHEATSHEET.md  advanced-features.md  api-reference.md  cheatsheet.md  index.md  python-sdk.md  raycast-conversion.md  response-types.md  testing.md  visual-elements.md
docs/releases/: checklist.md
docs/stylesheets/: extra.css
modules/common/: Appearance.qml  Config.qml  Directories.qml  Persistent.qml
modules/imageBrowser/: ImageBrowser.qml  ImageBrowserContent.qml
modules/launcher/: ActionBar.qml  DetachedPreviewPanel.qml  GenericGrid.qml  ImageBrowserGrid.qml  KeybindingMap.qml  Launcher.qml  PluginActionBar.qml  PluginCard.qml  PluginForm.qml  PluginRichCard.qml  PreviewPanel.qml  SearchBar.qml  SearchItem.qml  SearchWidget.qml  (+2 more)
plugins/: AGENTS.md  README.md  checksums.json  test-all  test-harness  test-helpers.sh
qml-latest/: 404.html  index.html  sitemap.xml
rust/: versions.json
scripts/: generate-plugin-checksums.sh  migrate_index_cache.py  release-check.sh  release.sh  render-aur-metadata.py  test_migrate_index_cache.py
services/: AudioService.qml  CompositorService.qml  ContextTracker.qml  FolderBrowser.qml  HistoryManager.qml  IconResolver.qml  LauncherSearch.qml  NiriService.qml  PluginRunner.qml  PluginWatcher.qml  ResultFactory.qml  ShellHistory.qml  SmartSuggestions.qml  WindowManager.qml  WorkflowRunner.qml
specs/: builtin-search.md  docs-refresh.md  installer-hardening.md  logging-telemetry.md  platform-support.md  plugin-sdk-guidance.md  plugin-security.md  release-readiness.md  unified-execution.md
v1.0.0-alpha/: index.html
(+256 files in other folders)
